fix scrollbar issue

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html {
   height: 100vh;
+  scroll-padding-top: 74px;
 }
 
 body {
@@ -8,7 +9,7 @@ body {
   padding-top: 74px;
   /* width: 100%; */
   height: calc(100% - 74px);
-  background: white;
+  background-color: #f3f3f3;
 }
 
 h1,
@@ -17,6 +18,12 @@ h3,
 a,
 p {
   font-family: "Fustat", Helvetica, sans-serif;
+}
+
+h1 {
+  font-size: 3rem;
+  margin-left: 5rem;
+  margin-top: 0;
 }
 
 .wrapper {
@@ -51,6 +58,10 @@ nav a {
 .logo {
   width: 5rem;
 }
+
+/* main {
+  padding-inline: 10px;
+} */
 
 section {
   height: calc(100vh - 74px);
